--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,10 @@ add_executable(fun_ptr chapter7_10/fun_ptr.cpp)
 add_executable(sceref chapter8_2/sceref.cpp)
 add_executable(swaps chapter8_2/swaps.cpp)
 add_executable(strtref chapter8_2/strtref.cpp)
+add_executable(left chapter8_3/left.cpp)
+add_executable(generate chapter8_3/generate.cpp)
+add_executable(twoswap chapter8_5/twoswap.cpp)
+add_executable(support chapter9_2_4/support.cpp chapter9_2_4/external.cpp)
+add_executable(twofile1 chapter9_2_5/twofile1.cpp
+        chapter9_2_5/twofile2.cpp)
+add_executable(static chapter9_2_6/static.cpp)
